--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@
     <script src="/dist/build.js"></script>
   </body>
 </html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-71679599-19"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-71679599-19');
+</script>
