trim a little fat

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Richard Bettridge</title>
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=.8">
+<!--    <meta property="og:image" content="//richardbettridge.com/static/ogimage.png" /> -->
+    <meta property="og:image" content="https://richardbettridge.com/static/headshot-binary-square.png" />
+    <meta property="og:title" content="RichardBettridge.com" />
+    <meta property="og:description" content="Portfolio site showing some of my interests and work" />
   </head>
   <body>
     <div id="app"></div>
