updated fav icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Richard Bettridge</title>
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favicon-headshot.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=.8">
 <!--    <meta property="og:image" content="//richardbettridge.com/static/ogimage.png" /> -->
     <meta property="og:image" content="https://richardbettridge.com/static/headshot-binary-square.png" />
